--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>馬祖藍眼淚互動體驗 - 帶標題</title>
+    <title>Shane's Website</title>
     <style>
         body, html {
             margin: 0;
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <div id="title">藍眼淚—</div>
+    <div id="title">藍眼淚—by Shane</div>
     <canvas id="canvas"></canvas>
     <script>
         const canvas = document.getElementById('canvas');
